Add Customer Support and Live Chat

--- a/src/main/resources/templates/adminDashboard.html
+++ b/src/main/resources/templates/adminDashboard.html
@@ -318,6 +318,7 @@
             <li><a th:href="@{/admin/users}"><i class="fas fa-users"></i> Users</a></li>
             <li><a th:href="@{/admin/view-tickets}"><i class="fas fa-ticket-alt"></i> Tickets</a></li>
             <li><a th:href="@{/admin/transactions}"><i class="fas fa-exchange-alt"></i> Transactions</a></li>
+            <li><a th:href="@{/admin/support/messages}"><i class="fas fa-headset"></i> Support</a></li>
             <li><a th:href="@{/logout}"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
         </ul>
     </nav>
