--- a/src/main/resources/templates/userHome.html
+++ b/src/main/resources/templates/userHome.html
@@ -671,6 +671,19 @@
           </button>
         </form>
       </div>
+      
+      <div class="card" data-aos="fade-up" data-aos-delay="300">
+        <i class="fas fa-headset"></i>
+        <h3>Customer Support</h3>
+        <p>Need help? Type your question...</p>
+        <form th:action="@{/support/submit}" method="get">
+          <button class="button">
+            <i class="fas fa-search-dollar"></i>
+            <span>Send Message</span>
+          </button>
+        </form>
+      </div>
+      
     </main>
   </div>
 
@@ -722,5 +735,30 @@
       }
     });
   </script>
+ 
+  <!-- Show live chat only for logged-in users -->
+<th:block th:if="${userName != null}">
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {};
+    Tawk_API.visitor = {
+      name: [[${userName}]],
+      email: [[${userEmail}]]
+    };
+  </script>
+  <script type="text/javascript">
+    var Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"),
+          s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/682c7169de0d8619101f2cae/1irmpm1oi';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+</th:block>
+
+  
 </body>
 </html>
