--- a/src/main/resources/templates/userHome.html
+++ b/src/main/resources/templates/userHome.html
@@ -737,7 +737,7 @@
   </script>
  
   <!-- Show live chat only for logged-in users -->
-<th:block th:if="${userName != null}">
+<!--<th:block th:if="${userName != null}">
   <script type="text/javascript">
     var Tawk_API = Tawk_API || {};
     Tawk_API.visitor = {
@@ -757,7 +757,8 @@
       s0.parentNode.insertBefore(s1, s0);
     })();
   </script>
-</th:block>
+</th:block> -->
+
 
   
 </body>
