Issue Sloved in Cloudinary

--- a/src/main/resources/templates/maskedAadhar.html
+++ b/src/main/resources/templates/maskedAadhar.html
@@ -280,6 +280,14 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="step">
+                <div class="step-number">10</div>
+                <div class="step-content">
+                    <h2>Convert Pdf to jpg, jpeg</h2>
+                    <p>Take <strong>Screenshot</strong> of downloaded PDF file then you can upload.</p>
+                </div>
+            </div>
         </div>
 
         <footer>
